// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
<div
  css={
    Array [
      undefined,
      Object {
        "map": undefined,
        "name": "142seyb",
        "next": undefined,
        "styles": "
    background: white;
    box-shadow: 0 2px 4px 0 rgba(3, 13, 54, 0.26);
    border: 1px solid #d4d9ea;
    border-radius: 6px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    h5 {
      @media (max-width: 992) {
        font-size: 18px !important;
      }
    }

    @media (max-width: 992px) {
      min-width: 200px;
      margin-top: 0 !important;
    }
  ",
      },
      Object {
        "map": undefined,
        "name": "1aofgej",
        "next": undefined,
        "styles": "
    padding: 1.5rem;
  ",
      },
      undefined,
      undefined,
    ]
  }
>
  <h3>
    foo
  </h3>
  <p
    css={
      Array [
        Object {
          "map": undefined,
          "name": "nd9hyy",
          "next": undefined,
          "styles": "
    display: inline-block;
    color: #030D36;
    font-size: 1.125rem;
  ",
        },
        Object {
          "map": undefined,
          "name": "9oecbb",
          "next": undefined,
          "styles": "
    font-size: 16px;
  ",
        },
        undefined,
        undefined,
        undefined,
        false,
        false,
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    foo
  </p>
</div>
`;

exports[`Header renders with object values 1`] = `
<div
  css={
    Array [
      undefined,
      Object {
        "map": undefined,
        "name": "142seyb",
        "next": undefined,
        "styles": "
    background: white;
    box-shadow: 0 2px 4px 0 rgba(3, 13, 54, 0.26);
    border: 1px solid #d4d9ea;
    border-radius: 6px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    h5 {
      @media (max-width: 992) {
        font-size: 18px !important;
      }
    }

    @media (max-width: 992px) {
      min-width: 200px;
      margin-top: 0 !important;
    }
  ",
      },
      Object {
        "map": undefined,
        "name": "1aofgej",
        "next": undefined,
        "styles": "
    padding: 1.5rem;
  ",
      },
      undefined,
      undefined,
    ]
  }
>
  <h3>
    <img
      alt="icon"
      className="foo"
      src="#"
    />
    <span>
      foo bar
    </span>
  </h3>
  <p
    css={
      Array [
        Object {
          "map": undefined,
          "name": "nd9hyy",
          "next": undefined,
          "styles": "
    display: inline-block;
    color: #030D36;
    font-size: 1.125rem;
  ",
        },
        Object {
          "map": undefined,
          "name": "9oecbb",
          "next": undefined,
          "styles": "
    font-size: 16px;
  ",
        },
        undefined,
        undefined,
        undefined,
        false,
        false,
        false,
        false,
        false,
        undefined,
      ]
    }
  >
    <span>
      foo bar
    </span>
  </p>
</div>
`;
